# openvq

./: .gitignore  CMakeLists.txt  README.md  Vagrantfile
cmake/: libs.cmake
cmake/mod/: FindLibAVCodec.cmake  FindLibAVFormat.cmake  FindLibAVUtil.cmake  FindLibSWScale.cmake
src/: CMakeLists.txt  main.cpp
src/io/: FileWriter.cpp  FileWriter.h  Frame.cpp  Frame.h  Logger.cpp  Logger.h  VideoProperties.cpp  VideoProperties.h  VideoSequence.cpp  VideoSequence.h  config.h
src/metrics/: Algorithm.cpp  Algorithm.h  Metrics.cpp  Metrics.h
src/metrics/common/alignment/: ColourAlignment.cpp  ColourAlignment.h  SpatialAlignment.cpp  SpatialAlignment.h
src/metrics/opvq/: OPVQ.cpp  OPVQ.h
src/metrics/opvq/analysis/: ChrominanceIndicator.cpp  ChrominanceIndicator.h  EdginessImage.cpp  EdginessImage.h  LuminanceIndicator.cpp  LuminanceIndicator.h  TemporalVariabilityIndicators.cpp  TemporalVariabilityIndicators.h
src/metrics/opvq/score/: DMOSMapper.cpp  DMOSMapper.h
src/metrics/psnr/: PSNR.cpp  PSNR.h
src/metrics/ssim/: SSIM.cpp  SSIM.h
